Closed Bug 334993 Opened 18 years ago Closed 18 years ago

nsMsgCompUtils.cpp shouldn't use brandShortName for User-Agent

Categories

(Thunderbird :: Message Compose Window, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird2.0

People

(Reporter: Pike, Assigned: mscott)

References

Details

(Keywords: fixed1.8.1)

Attachments

(1 file)

brandShortName is for l10n, I would expect User-Agent to be taken from
nsIXULAppInfo.

Not sure about specs here, but I wouldn't be suprised if the transcribed 
brandShortNames in gu-IN and pa-IN actually broke some RFCs on charset restriction
of mail headers.
Status: NEW → ASSIGNED
Component: MailNews: Composition → Message Compose Window
Product: Core → Thunderbird
Target Milestone: --- → Thunderbird2.0
should we add another branding string instead that is the untranslated brand name?
Assignee: nobody → mscott
Status: ASSIGNED → NEW
Attached patch the fixSplinter Review
This should do what we want.
Attachment #222413 - Flags: review?(l10n)
Hey Axel, can you review this patch when you have a chance? Thanks!
Attachment #222413 - Flags: review?(l10n) → review+
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1
Resolution: --- → FIXED
*** Bug 350306 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: