Bug #334993 --> don't use brandShortName for the Thunderbird user-agent string as some locales are translating Thunderbird. Use the value from nsIXULAppInfo instead. r=axel